# project-copilot-plusng

./: .gitattributes  .gitignore  README.md  RELEASE_GATE.md  RELEASE_PROCESS.md  pyproject.toml  pytest.ini  requirements.txt  test_out.txt  test_out_2.txt  test_out_3.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
app/: main.py  run_streamlit.py
app/core/: artifacts_repo.py  config_validator.py  external_tools.py  indexing_service.py
app/core/extractors/: base.py  docx.py  image.py  models.py  pdf.py  plain.py  registry.py
app/core/search/: models.py  service.py
app/core/utils/: binaries.py
app/db/: cli.py  database.py  migrator.py
app/models/: artifacts.py
app/services/: sources_service.py
app/ui/: config_loader.py  state.py
app/ui/components/: detail_panel.py  evidence_panel.py  list_panel.py  navigation.py
app/ui/pages/: home.py  (+4 more)
config/: dev.yaml  general.yaml
db/migrations/: 001_initial.sql  002_create_artifacts_tables.sql
scripts/: pack_audit.ps1  run_dev.ps1  run_prod.ps1  smoke_test.ps1
tests/: test_audit_refinement.py  test_config_backward_compat.py  test_config_env_file_priority.py  test_config_loader_env_override.py  test_config_strict.py  test_db_clean.py  test_db_migrations.py  test_db_migrations_strict.py  test_db_migrations_upgrade_from_v020_like.py  test_extraction_docx_pdf.py  test_extraction_mvp.py  test_indexing_plain_text.py  test_indexing_status.py  test_no_hidden_unicode.py  test_search_fts_or_like.py  test_search_mvp_contract.py  test_search_service.py  test_smart_indexing.py  test_smoke.py  test_sources_service.py  test_startup_migrations.py  test_ui_imports.py
