[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-copilot-plusng"
version = "0.0.1"
description = "Project Copilot Starter Kit – Plus NG"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

